# racad

./: .gitignore  README.md  pyproject.toml  racad.py  test_racad.py
.github/workflows/: pypi-publish.yml  test-pypi-publish.yml  unittest.yml
