
[project]
name = "racad"
version = "0.1.0"
description = "Runtime Accessible Class Attribute Docstrings"
readme = "README.md"
authors = [{ name = "Lucas Steinmann", email = "lucas@steinm.net" }]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/Lucas-Steinmann/racad"
"Tracker" = "https://github.com/Lucas-Steinmann/racad/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
